--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,31 @@
 
 <script>
 
+function playSound(e){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+
+    if (!audio) return; //frena la funcion
+    audio.currentTime = 0; //para que rebobine el audio
+    audio.play();
+
+    key.classList.add('playing');
+
+    }
+
+
+function removeTransition (e){
+
+      if (e.propertyName !== 'transform') return; //salteatelo si no es transform
+      this.classList.remove('playing');
+
+    }
+
+const keys = document.querySelectorAll('.key');
+keys.forEach (key => key.addEventListener('transitionend', removeTransition));
+
+window.addEventListener('keydown', playSound);
+
 </script>
 
 
