--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,39 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%; /*el vertice de origen de la manito. Antes estaba en 50% y giraba sobre si mismo */
+      transform: rotate(90deg); /*para que empiecen las manitos desde las 12 (antes empezaman dsde el medio horizontal)*/
+      transition: all 0.05s; /*para que la transicion entre minutos no sea bruzca, sino que se vaya moviendo despacio */
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); /*para que haga elbackleash cuando se mueve la aguja*/
     }
 
   </style>
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+
+    function setDate(){
+
+      const now = new Date ();
+      const seconds = now.getSeconds ();
+      const secondDegrees = ((seconds / 60) * 360) + 90; //para convertir segundos a grados
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hour = now.getHours();
+      const hourDegrees = ((hour / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+    }
+
+    setInterval(setDate, 1000); //cada 1000 ejecutame setDate
 
   </script>
 </body>
