Day 2 (fixed transition)

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -64,7 +64,7 @@
       top:50%;
       transform-origin: 100%; /*el vertice de origen de la manito. Antes estaba en 50% y giraba sobre si mismo */
       transform: rotate(90deg); /*para que empiecen las manitos desde las 12 (antes empezaman dsde el medio horizontal)*/
-      transition: all 0.05s; /*para que la transicion entre minutos no sea bruzca, sino que se vaya moviendo despacio */
+      /*transition: all 0.05s; /*para que la transicion entre minutos no sea bruzca, sino que se vaya moviendo despacio */
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); /*para que haga elbackleash cuando se mueve la aguja*/
     }
 
