--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,67 @@
     }
 
     // Regular
+    console.log('holisss');
 
     // Interpolated
+    console.log('holisss i am a %s string', 'sarasadsasa');
 
     // Styled
+    //console.log('%c soy un gran texto', 'font-size:50px ; background:red; text-shadow: 10px 10px 0 blue');
 
     // warning!
+    console.warn('oh nooo');
 
     // Error :|
+    console.error('te displayeo un error');
 
     // Info
+    console.info('te doy informacion');
 
     // Testing
+    const p = document.querySelector('p');
+
+    console.assert(p.classList.contains('ouch'), 'esta maaaal');
 
     // clearing
+    console.clear(); //te limpia la consola, not good
 
     // Viewing DOM Elements
+    console.dir(p);
+
+
+    console.clear();
 
     // Grouping together
+    dogs.forEach(dog=>{
+
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age *7} dog years old`);
+
+      console.groupEnd(`${dog.name}`);
+
+    });
 
     // counting
+    console.count('wes');
+    console.count('wes');
+    console.count('wes');
+    console.count('juan');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/wesbos')
+      .then(data=>data.json())
+      .then(data=> {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
+
+
+ console.table(dogs);
 
   </script>
 </body>
