--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -9,7 +9,7 @@
 
     html {
       font-family: sans-serif;
-      background:#ffc600;
+      background:#FFC0CB;
     }
 
     .inbox {
@@ -99,6 +99,32 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type ="checkbox"]');
+  let lastChecked; 
+
+  function handleCheck (e){
+    let inBetween = false;
+
+    if(e.shiftKey && this.checked){ //si estan apretando al tecla shif hace esto y estan chekeando la box
+
+      checkboxes.forEach(checkbox =>{
+        
+        if (checkbox === this || checkbox === lastChecked){
+          inBetween = !inBetween;
+        }
+
+      if (inBetween){
+        checkbox.checked = true;
+      }
+
+      });
+    }
+
+
+    lastChecked = this;
+  }
+
+  checkboxes.forEach(checkbox=> checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
