--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -177,11 +177,31 @@
     <li data-time="1:56">
       Video 57
     </li>
-    <li data-time="4:04">
+    <li data-time="4:08">
       Video 58
     </li>
   </ul>
+
 <script>
+  const timeNodes = Array.from(document.querySelectorAll('[data-time]')); //para convertir la nodelist en array
+
+  const seconds = timeNodes
+    .map(node=> node.dataset.time)// para pasar el array a strings 
+    .map(timeCode=> {
+      const [mins, secs] = timeCode.split(':').map(parseFloat); //para dividirlo en : y pasarlo de string a number
+      return (mins * 60) + secs;
+    })
+    .reduce((total, vidSeconds)=> total + vidSeconds);
+
+    let secondsLeft = seconds;
+    const hours = Math.floor(secondsLeft / 3600);
+    secondsLeft = secondsLeft % 3600; // cuantos quedan despues de ser distribuidos en enteros 
+
+    const mins = Math.floor(secondsLeft / 60);
+    secondsLeft = secondsLeft % 60;
+
+    console.log(hours, mins, secondsLeft);
+
 </script>
 </body>
 </html>
