--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -39,6 +39,24 @@
 
 <button></button>
 <script>
+const divs = document.querySelectorAll('div');
+const button = document.querySelector('button');
+
+function logText(e){
+  console.log(this.classList.value);
+  //e.stopPropagation();//no agarres todos los parents
+}
+
+divs.forEach(div => div.addEventListener('click', logText,{
+  capture: false,
+  once: true
+}));
+
+button.addEventListener('click', ()=> {
+  console.log('click');
+},{
+  once: true //para que se haga una sola vez
+});
 
 </script>
 </body>
